# modelEvaluator

./: .gitignore  README.md
docs/: inspiration.md
docs/tests/: common_service.py  datatypes.py  morning_greeting_test.py
modelEvaluator/: README.md  modelEvaluator.py  pyproject.toml
