[project]
name = "modelevaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "duckdb (>=1.5.1,<2.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "mypy (>=1.20.0,<2.0.0)"
]

[tool.poetry.scripts]
model_eval = "modelEvaluator:cli"

